# kleys

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: create-draft-release.yml  create_draft_release.yml  ghcr.yml  lint.yml  pypi.yml  test.yml
docs/: ARCHITECT.md  DOCKER.md  SECURITY.md
src/kleys/: __init__.py  cli.py  console.py  crypto.py  keyring_.py  modes.py  password.py  utils.py
tests/: conftest.py  test_cli.py  test_console.py  test_crypto.py  test_keyring_.py  test_modes.py  test_password.py  test_utils.py
