[project]
name = "kleys"
version = "0.1.2"
description = "Execute commands with secrets loaded encrypted from your system keyring"
readme = "README.md"
authors = [
    { name = "Hugo Batista <code at hugobatista.com>" },
]
requires-python = ">=3.11"
license = { text = "GPL-3.0-only" }

dependencies = [
    "typer>=0.12",
    "keyring>=25.0",
    "cryptography>=44.0",
]

[dependency-groups]
lint = [
    "mypy>=1",
    "ruff>=0.11",
]
test = [
    "pytest>=8",
    "pytest-mock>=3",
    "pytest-cov>=6",
]
dev = [
    "hatch>=1.16.5",
    {include-group = "lint"},
    {include-group = "test"},
]

[project.scripts]
kleys = "kleys.cli:main"

[tool.uv]
required-version = "0.11.18"
exclude-newer = "30 days"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kleys"]

[tool.hatch.envs.default]
type = "virtual"
path = ".venv"

[tool.hatch.envs.default.scripts]
lint = "ruff check . --fix"
format = "ruff format ."
lint-check = "ruff check ."
format-check = "ruff format --check ."
test = "pytest"
typecheck = "mypy"
validate = ["lint", "format", "test", "typecheck"]
check = ["lint-check", "format-check", "test", "typecheck"]

[tool.pytest.ini_options]
addopts = "-v --cov --cov-report=term-missing"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/kleys"]
omit = ["*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 100

[tool.mypy]
python_version = "3.11"
strict = true
incremental = false
check_untyped_defs = true
files = ["src"]
exclude = ["tests/"]

[tool.ruff]
line-length = 80
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"
